boilerplates/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <service-name>
  namespace: <namespace>
spec:
  type: <service-type>
  selector:
    app: <app-name>
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
