boilerplates/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  rules:
    - host: "homepage.pnfb.home"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000 
  tls:
    - hosts: 
        - "homepage.pnfb.home"
      secretName: letsencrypt
